--- a/css/list.css
+++ b/css/list.css
@@ -1,5 +1,5 @@
 .list {
-    padding: 20px;
+    padding: 0;
     margin: 0;
     list-style: none;
 }
@@ -10,8 +10,8 @@
     grid-gap: 10px;
     align-items: center;
     padding: 10px;
-    border-bottom: 1px solid #eee;
-    word-break: break-word;
+    border-bottom: 1px solid #ededed;
+    word-break: break-all;
 }
 
 .list__item--done {
@@ -21,8 +21,8 @@
 .list__button {
     border: none;
     color: white;
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     padding: 0;
     cursor: pointer;
 }
