--- a/css/section.css
+++ b/css/section.css
@@ -9,6 +9,6 @@
 .section__header {
     padding: 20px;
     font-size: 22px;
-    border-bottom: 1px solid #ededed;
+    border-bottom: 2px solid #ddd;
     margin: 0;
     }
