--- a/css/form.css
+++ b/css/form.css
@@ -2,10 +2,9 @@
     display: grid;
     grid-template-columns: 1fr auto;
     grid-gap: 20px;
-    padding: 20px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     .form {
         grid-template-columns: 1fr;
     }
@@ -13,20 +12,18 @@
 
 .form__input {
     padding: 10px;
-    border: 2px solid #ddd;
+    border: 1px solid #ddd;
     min-width: 100%;
-    font-size: 18px;
 }
 
 .form__button {
-    background-color: teal;
+    padding: 10px;
+    background: teal;
     color: white;
     border: none;
-    min-width: 100%;
-    font-size: 18px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     .form__button {
         max-width: 100%;
         min-height: 30px;
@@ -34,10 +31,9 @@
 }
 
 .form__button:hover {
-    background-color: rgb(12, 161, 161);
-    cursor: pointer;
+    background-color: rgb(0, 92, 92);
 }
 
 .form__button:active {
-    background-color: rgb(13, 112, 112);
+    background-color: rgb(5, 167, 167);
 }
