--- a/css/section.css
+++ b/css/section.css
@@ -1,14 +1,17 @@
 .section {
-    background-color: white;
-    box-shadow: 0 0 6px #eee;
     margin: 10px 0;
     min-width: 100px;
+    background: white;
     box-shadow: 0 0 5px #ddd;
 }
 
 .section__header {
+    font-size: 20px;
     padding: 20px;
-    font-size: 22px;
-    border-bottom: 2px solid #ddd;
+    border-bottom: 1px solid #ddd;
     margin: 0;
-    }
+}
+
+.section__body {
+    padding: 20px;
+}
