--- a/css/form.css
+++ b/css/form.css
@@ -4,7 +4,7 @@
     grid-gap: 20px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .form {
         grid-template-columns: 1fr;
     }
@@ -21,9 +21,10 @@
     background: teal;
     color: white;
     border: none;
+    transition: background 1s, transform 1s;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .form__button {
         max-width: 100%;
         min-height: 30px;
@@ -32,6 +33,7 @@
 
 .form__button:hover {
     background-color: rgb(0, 92, 92);
+    transform: scale(1.2);
 }
 
 .form__button:active {
