--- a/css/section.css
+++ b/css/section.css
@@ -8,10 +8,47 @@
 .section__header {
     font-size: 20px;
     padding: 20px;
-    border-bottom: 1px solid #ddd;
     margin: 0;
 }
 
 .section__body {
     padding: 20px;
+}
+
+.section__headerWithButtons {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #ddd;
+};
+
+@media (max-width: 767px) {
+    .section__headerWithButtons {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 767px) {
+    .section__buttons {
+        display: grid;
+        align-items: center;
+    }
+}
+
+.section__button {
+    color: teal;
+    background: none;
+    border: none;
+    transition: 0.5s;
+    padding: 20px;
+}
+
+.section__button:hover {
+    color: hsl(180, 95%, 41%);
+    cursor: pointer;
+}
+
+.section__button:disabled {
+    color: #ccc
 }
